wf-all-transformers/myproject/sample-node-app/cfnodejsapp-helmchart/templates/cfnodejsapp-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: myproject
    name: myproject
spec:
    rules:
        - host: myproject.com
          http:
            paths:
                - backend:
                    service:
                        name: cfnodejsapp
                        port:
                            name: port-8080
                  path: /cfnodejsapp
                  pathType: Prefix
status:
    loadBalancer: {}

...
